{
  "version": 4,
  "terraform_version": "1.13.1",
  "serial": 124,
  "lineage": "9fa5452e-f831-040f-a6b3-2ea264de96d7",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "bastion-ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0027ddc8b774fb3ad",
            "arn": "arn:aws:ec2:us-west-2:676206941602:elastic-ip/eipalloc-0027ddc8b774fb3ad",
            "association_id": "eipassoc-017f709772509c517",
            "domain": "vpc",
            "id": "eipalloc-0027ddc8b774fb3ad",
            "instance": "i-0e9f804ce23760197",
            "network_border_group": "us-west-2",
            "network_interface": "eni-0a4247d357df390af",
            "private_dns": "ip-10-0-1-98.us-west-2.compute.internal",
            "private_ip": "10.0.1.98",
            "public_dns": "ec2-44-226-152-36.us-west-2.compute.amazonaws.com",
            "public_ip": "44.226.152.36",
            "public_ipv4_pool": "amazon",
            "region": "us-west-2",
            "tags": {
              "Name": "bastion-eip"
            },
            "tags_all": {
              "Name": "bastion-eip"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_instance.ec2-bastion",
            "aws_key_pair.mykey",
            "aws_security_group.bastion",
            "aws_subnet.itskillboost-public-subnet-01",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat-eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-011babe9c2205a392",
            "arn": "arn:aws:ec2:us-west-2:676206941602:elastic-ip/eipalloc-011babe9c2205a392",
            "association_id": "eipassoc-0f72d28580e63a389",
            "domain": "vpc",
            "id": "eipalloc-011babe9c2205a392",
            "network_border_group": "us-west-2",
            "network_interface": "eni-008c9deda3719a419",
            "private_dns": "ip-10-0-1-17.us-west-2.compute.internal",
            "private_ip": "10.0.1.17",
            "public_dns": "ec2-52-38-175-44.us-west-2.compute.amazonaws.com",
            "public_ip": "52.38.175.44",
            "public_ipv4_pool": "amazon",
            "region": "us-west-2"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2-bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-03aa99ddf5498ceb9",
            "arn": "arn:aws:ec2:us-west-2:676206941602:instance/i-0e9f804ce23760197",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e9f804ce23760197",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "mykey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0a4247d357df390af"
              }
            ],
            "primary_network_interface_id": "eni-0a4247d357df390af",
            "private_dns": "ip-10-0-1-98.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.98",
            "public_dns": "ec2-44-226-152-36.us-west-2.compute.amazonaws.com",
            "public_ip": "44.226.152.36",
            "region": "us-west-2",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "tags": {
                  "Name": "ec2-bastion"
                },
                "tags_all": {
                  "Name": "ec2-bastion"
                },
                "throughput": 125,
                "volume_id": "vol-0c89e4a14fcf5ea73",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00031c1fcb5498ce5",
            "tags": {
              "Name": "ec2-bastion"
            },
            "tags_all": {
              "Name": "ec2-bastion"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-071c68efacee712be"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "676206941602",
            "id": "i-0e9f804ce23760197",
            "region": "us-west-2"
          },
          "dependencies": [
            "aws_key_pair.mykey",
            "aws_security_group.bastion",
            "aws_subnet.itskillboost-public-subnet-01",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2-web01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "status": "tainted",
          "schema_version": 2,
          "attributes": {
            "ami": "ami-03aa99ddf5498ceb9",
            "arn": "arn:aws:ec2:us-west-2:676206941602:instance/i-0307268620b7ea161",
            "associate_public_ip_address": false,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0307268620b7ea161",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "mykey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0867466edf02f7d0f"
              }
            ],
            "primary_network_interface_id": "eni-0867466edf02f7d0f",
            "private_dns": "ip-10-0-101-253.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.101.253",
            "region": "us-west-2",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "tags": {
                  "Name": "ec2-web01"
                },
                "tags_all": {
                  "Name": "ec2-web01"
                },
                "throughput": 125,
                "volume_id": "vol-022e52abd686e24b7",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a1dc90faded17748",
            "tags": {
              "Name": "ec2-web01"
            },
            "tags_all": {
              "Name": "ec2-web01"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-08377e03b457d4de9"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "676206941602",
            "id": "i-0307268620b7ea161",
            "region": "us-west-2"
          },
          "dependencies": [
            "aws_key_pair.mykey",
            "aws_security_group.allowd_web",
            "aws_subnet.itskillboost-private-subnet-01",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2-web02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "status": "tainted",
          "schema_version": 2,
          "attributes": {
            "ami": "ami-03aa99ddf5498ceb9",
            "arn": "arn:aws:ec2:us-west-2:676206941602:instance/i-09d6e0a66c4a29d91",
            "associate_public_ip_address": false,
            "availability_zone": "us-west-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-09d6e0a66c4a29d91",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "mykey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0abe5b27f152db0c9"
              }
            ],
            "primary_network_interface_id": "eni-0abe5b27f152db0c9",
            "private_dns": "ip-10-0-102-62.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.102.62",
            "region": "us-west-2",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "tags": {
                  "Name": "ec2-web02"
                },
                "tags_all": {
                  "Name": "ec2-web02"
                },
                "throughput": 125,
                "volume_id": "vol-0f329b1ff9a99859e",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0137095e588ec2a22",
            "tags": {
              "Name": "ec2-web02"
            },
            "tags_all": {
              "Name": "ec2-web02"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-08377e03b457d4de9"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "676206941602",
            "id": "i-09d6e0a66c4a29d91",
            "region": "us-west-2"
          },
          "dependencies": [
            "aws_key_pair.mykey",
            "aws_security_group.allowd_web",
            "aws_subnet.itskillboost-private-subnet-02",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:676206941602:internet-gateway/igw-030ba8cf6e3b40a70",
            "id": "igw-030ba8cf6e3b40a70",
            "owner_id": "676206941602",
            "region": "us-west-2",
            "tags": {
              "Name": "itskillboost-igw"
            },
            "tags_all": {
              "Name": "itskillboost-igw"
            },
            "vpc_id": "vpc-06fd33f6db834b475"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "web-lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-west-2:676206941602:loadbalancer/app/web-lb/70b06b35d030e897",
            "arn_suffix": "app/web-lb/70b06b35d030e897",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "web-lb-281875065.us-west-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-west-2:676206941602:loadbalancer/app/web-lb/70b06b35d030e897",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "web-lb",
            "preserve_host_header": false,
            "region": "us-west-2",
            "security_groups": [
              "sg-023653b2808bd9ee4"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-00031c1fcb5498ce5"
              },
              {
                "subnet_id": "subnet-0ce5f548fcb50ff28"
              }
            ],
            "subnets": [
              "subnet-00031c1fcb5498ce5",
              "subnet-0ce5f548fcb50ff28"
            ],
            "tags": {
              "Name": "web-lb"
            },
            "tags_all": {
              "Name": "web-lb"
            },
            "vpc_id": "vpc-06fd33f6db834b475",
            "xff_header_processing_mode": "append",
            "zone_id": "Z1H1FL5HABSF5"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:676206941602:loadbalancer/app/web-lb/70b06b35d030e897"
          },
          "dependencies": [
            "aws_security_group.elb",
            "aws_subnet.itskillboost-public-subnet-01",
            "aws_subnet.itskillboost-public-subnet-02",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-west-2:676206941602:listener/app/web-lb/70b06b35d030e897/912e60952284e2b0",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:676206941602:targetgroup/tg/fa7a6b7d03b9a153",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:676206941602:listener/app/web-lb/70b06b35d030e897/912e60952284e2b0",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-west-2:676206941602:loadbalancer/app/web-lb/70b06b35d030e897",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "us-west-2",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:676206941602:listener/app/web-lb/70b06b35d030e897/912e60952284e2b0"
          },
          "dependencies": [
            "aws_lb.web-lb",
            "aws_lb_target_group.tg",
            "aws_security_group.elb",
            "aws_subnet.itskillboost-public-subnet-01",
            "aws_subnet.itskillboost-public-subnet-02",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:676206941602:targetgroup/tg/fa7a6b7d03b9a153",
            "arn_suffix": "targetgroup/tg/fa7a6b7d03b9a153",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 15,
                "matcher": "200",
                "path": "/index.html",
                "port": "80",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:676206941602:targetgroup/tg/fa7a6b7d03b9a153",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-west-2:676206941602:loadbalancer/app/web-lb/70b06b35d030e897"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "us-west-2",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "tg"
            },
            "tags_all": {
              "Name": "tg"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-06fd33f6db834b475"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:676206941602:targetgroup/tg/fa7a6b7d03b9a153"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "tg-att1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-west-2:676206941602:targetgroup/tg/fa7a6b7d03b9a153-20250909065729728500000008",
            "port": 80,
            "region": "us-west-2",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:676206941602:targetgroup/tg/fa7a6b7d03b9a153",
            "target_id": "i-0307268620b7ea161"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_instance.ec2-web01",
            "aws_key_pair.mykey",
            "aws_lb_target_group.tg",
            "aws_security_group.allowd_web",
            "aws_subnet.itskillboost-private-subnet-01",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "tg-att2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-west-2:676206941602:targetgroup/tg/fa7a6b7d03b9a153-20250909065729362400000007",
            "port": 80,
            "region": "us-west-2",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:676206941602:targetgroup/tg/fa7a6b7d03b9a153",
            "target_id": "i-09d6e0a66c4a29d91"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_instance.ec2-web02",
            "aws_key_pair.mykey",
            "aws_lb_target_group.tg",
            "aws_security_group.allowd_web",
            "aws_subnet.itskillboost-private-subnet-02",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-011babe9c2205a392",
            "association_id": "eipassoc-0f72d28580e63a389",
            "connectivity_type": "public",
            "id": "nat-0abed78a250ea1925",
            "network_interface_id": "eni-008c9deda3719a419",
            "private_ip": "10.0.1.17",
            "public_ip": "52.38.175.44",
            "region": "us-west-2",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-00031c1fcb5498ce5"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat-eip",
            "aws_subnet.itskillboost-public-subnet-01",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:676206941602:route-table/rtb-0bdd717c9ab2cecb6",
            "id": "rtb-0bdd717c9ab2cecb6",
            "owner_id": "676206941602",
            "propagating_vgws": [],
            "region": "us-west-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-030ba8cf6e3b40a70",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "route-table"
            },
            "tags_all": {
              "Name": "route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-06fd33f6db834b475"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "676206941602",
            "id": "rtb-0bdd717c9ab2cecb6",
            "region": "us-west-2"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route-table-db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:676206941602:route-table/rtb-0d771f77e071018ea",
            "id": "rtb-0d771f77e071018ea",
            "owner_id": "676206941602",
            "propagating_vgws": [],
            "region": "us-west-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0abed78a250ea1925",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "route-table-db"
            },
            "tags_all": {
              "Name": "route-table-db"
            },
            "timeouts": null,
            "vpc_id": "vpc-06fd33f6db834b475"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "676206941602",
            "id": "rtb-0d771f77e071018ea",
            "region": "us-west-2"
          },
          "dependencies": [
            "aws_eip.nat-eip",
            "aws_nat_gateway.nat",
            "aws_subnet.itskillboost-public-subnet-01",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route-table-private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:676206941602:route-table/rtb-0462d16a97332a78f",
            "id": "rtb-0462d16a97332a78f",
            "owner_id": "676206941602",
            "propagating_vgws": [],
            "region": "us-west-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0abed78a250ea1925",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "route-table-private"
            },
            "tags_all": {
              "Name": "route-table-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-06fd33f6db834b475"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "676206941602",
            "id": "rtb-0462d16a97332a78f",
            "region": "us-west-2"
          },
          "dependencies": [
            "aws_eip.nat-eip",
            "aws_nat_gateway.nat",
            "aws_subnet.itskillboost-public-subnet-01",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "db-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09f7c4a9c1d07d474",
            "region": "us-west-2",
            "route_table_id": "rtb-0d771f77e071018ea",
            "subnet_id": "subnet-0fe0dfb4a5d6aa9bb"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat-eip",
            "aws_nat_gateway.nat",
            "aws_route_table.route-table-db",
            "aws_subnet.itskillboost-db-subnet-01",
            "aws_subnet.itskillboost-public-subnet-01",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "db-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02ae5da29002e046e",
            "region": "us-west-2",
            "route_table_id": "rtb-0d771f77e071018ea",
            "subnet_id": "subnet-018e0f423385b121a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat-eip",
            "aws_nat_gateway.nat",
            "aws_route_table.route-table-db",
            "aws_subnet.itskillboost-db-subnet-02",
            "aws_subnet.itskillboost-public-subnet-01",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-014a6d9750300a922",
            "region": "us-west-2",
            "route_table_id": "rtb-0462d16a97332a78f",
            "subnet_id": "subnet-0a1dc90faded17748"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat-eip",
            "aws_nat_gateway.nat",
            "aws_route_table.route-table-private",
            "aws_subnet.itskillboost-private-subnet-01",
            "aws_subnet.itskillboost-public-subnet-01",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-030f695cb1e338c99",
            "region": "us-west-2",
            "route_table_id": "rtb-0462d16a97332a78f",
            "subnet_id": "subnet-0137095e588ec2a22"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat-eip",
            "aws_nat_gateway.nat",
            "aws_route_table.route-table-private",
            "aws_subnet.itskillboost-private-subnet-02",
            "aws_subnet.itskillboost-public-subnet-01",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c705df7d941a7c26",
            "region": "us-west-2",
            "route_table_id": "rtb-0bdd717c9ab2cecb6",
            "subnet_id": "subnet-00031c1fcb5498ce5"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.route-table",
            "aws_subnet.itskillboost-public-subnet-01",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-092cb71e902c66610",
            "region": "us-west-2",
            "route_table_id": "rtb-0bdd717c9ab2cecb6",
            "subnet_id": "subnet-0ce5f548fcb50ff28"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.route-table",
            "aws_subnet.itskillboost-public-subnet-02",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allowd_web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:676206941602:security-group/sg-08377e03b457d4de9",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08377e03b457d4de9",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allowed HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allowed HTTPs",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allowed SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-20250909065712479200000001",
            "name_prefix": "terraform-",
            "owner_id": "676206941602",
            "region": "us-west-2",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-06fd33f6db834b475"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "676206941602",
            "id": "sg-08377e03b457d4de9",
            "region": "us-west-2"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:676206941602:security-group/sg-071c68efacee712be",
            "description": "for bastion host server",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-071c68efacee712be",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allowed all for ssh",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "bastion",
            "name_prefix": "",
            "owner_id": "676206941602",
            "region": "us-west-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "bastion"
            },
            "tags_all": {
              "Name": "bastion"
            },
            "timeouts": null,
            "vpc_id": "vpc-06fd33f6db834b475"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "676206941602",
            "id": "sg-071c68efacee712be",
            "region": "us-west-2"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "elb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:676206941602:security-group/sg-023653b2808bd9ee4",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-023653b2808bd9ee4",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "elb",
            "name_prefix": "",
            "owner_id": "676206941602",
            "region": "us-west-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "elb"
            },
            "tags_all": {
              "Name": "elb"
            },
            "timeouts": null,
            "vpc_id": "vpc-06fd33f6db834b475"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "676206941602",
            "id": "sg-023653b2808bd9ee4",
            "region": "us-west-2"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "bastion-egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-2483012947",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "region": "us-west-2",
            "security_group_id": "sg-071c68efacee712be",
            "security_group_rule_id": "sgr-05039b25adce4ae9a",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.bastion",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "bastion-ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "allowed all for ssh",
            "from_port": 22,
            "id": "sgrule-2057808779",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "us-west-2",
            "security_group_id": "sg-071c68efacee712be",
            "security_group_rule_id": "sgr-01453d513b55b7ce4",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.bastion",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "elb-egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-361971753",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "region": "us-west-2",
            "security_group_id": "sg-023653b2808bd9ee4",
            "security_group_rule_id": "sgr-02111c840f0e20b1c",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.elb",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "elb-ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 80,
            "id": "sgrule-1778594848",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "us-west-2",
            "security_group_id": "sg-023653b2808bd9ee4",
            "security_group_rule_id": "sgr-0dc3444873324c329",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.elb",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "itskillboost-db-subnet-01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:676206941602:subnet/subnet-0fe0dfb4a5d6aa9bb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.201.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fe0dfb4a5d6aa9bb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "676206941602",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-west-2",
            "tags": {
              "Name": "itskillboost-db-subnet-01"
            },
            "tags_all": {
              "Name": "itskillboost-db-subnet-01"
            },
            "vpc_id": "vpc-06fd33f6db834b475"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "676206941602",
            "id": "subnet-0fe0dfb4a5d6aa9bb",
            "region": "us-west-2"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "itskillboost-db-subnet-02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:676206941602:subnet/subnet-018e0f423385b121a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.202.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-018e0f423385b121a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "676206941602",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-west-2",
            "tags": {
              "Name": "itskillboost-db-subnet-02"
            },
            "tags_all": {
              "Name": "itskillboost-db-subnet-02"
            },
            "vpc_id": "vpc-06fd33f6db834b475"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "676206941602",
            "id": "subnet-018e0f423385b121a",
            "region": "us-west-2"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "itskillboost-private-subnet-01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:676206941602:subnet/subnet-0a1dc90faded17748",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a1dc90faded17748",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "676206941602",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-west-2",
            "tags": {
              "Name": "itskillboost-private-subnet-01"
            },
            "tags_all": {
              "Name": "itskillboost-private-subnet-01"
            },
            "vpc_id": "vpc-06fd33f6db834b475"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "676206941602",
            "id": "subnet-0a1dc90faded17748",
            "region": "us-west-2"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "itskillboost-private-subnet-02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:676206941602:subnet/subnet-0137095e588ec2a22",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0137095e588ec2a22",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "676206941602",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-west-2",
            "tags": {
              "Name": "itskillboost-private-subnet-02"
            },
            "tags_all": {
              "Name": "itskillboost-private-subnet-02"
            },
            "vpc_id": "vpc-06fd33f6db834b475"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "676206941602",
            "id": "subnet-0137095e588ec2a22",
            "region": "us-west-2"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "itskillboost-public-subnet-01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:676206941602:subnet/subnet-00031c1fcb5498ce5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00031c1fcb5498ce5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "676206941602",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-west-2",
            "tags": {
              "Name": "itskillboost-public-subnet-01"
            },
            "tags_all": {
              "Name": "itskillboost-public-subnet-01"
            },
            "vpc_id": "vpc-06fd33f6db834b475"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "676206941602",
            "id": "subnet-00031c1fcb5498ce5",
            "region": "us-west-2"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "itskillboost-public-subnet-02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:676206941602:subnet/subnet-0ce5f548fcb50ff28",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ce5f548fcb50ff28",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "676206941602",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-west-2",
            "tags": {
              "Name": "itskillboost-public-subnet-02"
            },
            "tags_all": {
              "Name": "itskillboost-public-subnet-02"
            },
            "vpc_id": "vpc-06fd33f6db834b475"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "676206941602",
            "id": "subnet-0ce5f548fcb50ff28",
            "region": "us-west-2"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:676206941602:vpc/vpc-06fd33f6db834b475",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0e7b4c91e4a4e69d3",
            "default_route_table_id": "rtb-08202291f4eeebd6b",
            "default_security_group_id": "sg-09962677169bb4b40",
            "dhcp_options_id": "dopt-05e9d3dd2583a83ca",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-06fd33f6db834b475",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-08202291f4eeebd6b",
            "owner_id": "676206941602",
            "region": "us-west-2",
            "tags": {
              "Name": "itskillboost-vpc"
            },
            "tags_all": {
              "Name": "itskillboost-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}